[package]
name = "etag"
version = "2.0.1"
authors = ["Douman <douman@gmx.se>"]
description = "Simple ETag calculation implementation"
license = "BSL-1.0"
keywords = ["http", "etag"]
categories = ["no-std"]
edition = "2018"

repository = "https://github.com/DoumanAsh/etag-rs"
documentation = "https://docs.rs/etag/"

readme = "README.md"

[dependencies]
wy = "1"

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]
