[package]
name = "etag"
version = "3.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Simple ETag calculation implementation"
license = "BSL-1.0"
keywords = ["http", "etag"]
categories = ["no-std"]
edition = "2018"

repository = "https://github.com/DoumanAsh/etag-rs"
documentation = "https://docs.rs/etag/"

readme = "README.md"

[dependencies.xxhash-rust]
version = "0.8"
features = ["const_xxh3", "xxh3"]

[dependencies]
str-buf = "2"

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
